workaround for the subprocess, hopefully fixed soon by #909